--- a/.env-sample
+++ b/.env-sample
@@ -4,24 +4,16 @@
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=wordpress
 MYSQL_IMAGE=mysql:5.7
+DB_DATA_PATH=db_data
+#DB_DATA_PATH=/media/vmhost/www/docker-example.com/_mysql
 
 #Webserver
 WEBSERVER_PORT=80
-#WEB_ROOT_PATH=/media/vmhost/www/docker-example.com/www
 WEB_ROOT_PATH=wp_data
+#WEB_ROOT_PATH=/media/vmhost/www/docker-example.com/_www
 
 #wordpress
 WORDPRESS_IMAGE=wordpress:latest
 WORDPRESS_DB_NAME=wordpress
 WORDPRESS_DB_USER=root
 WORDPRESS_DB_PASSWORD=wordpress
-
-
-#PHP
-
-#Files
-#DB_DATA_PATH=/media/vmhost/www/docker-example.com/_mysql
-DB_DATA_PATH=db_data
-
-#System
-TERM=xterm
