--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
      volumes:
        - ${DB_DATA_PATH}:/var/lib/mysql
      ports:
-      - ${MYSQL_PORT}:3306       
+		 - ${MYSQL_PORT}:3306   
      restart: always
      environment:
        MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
@@ -18,7 +18,9 @@ services:
        - db
      image: ${WORDPRESS_IMAGE}
      volumes:
-       - ${WEB_ROOT_PATH}:/var/www/html    
+       - ${WEB_ROOT_PATH}:/var/www
+       - ${WEB_ROOT_PATH}/html:/var/www/html
+	   
      ports:
        - ${WEBSERVER_PORT}:80
      restart: always
