--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
    db:
      image: ${MYSQL_IMAGE}
      volumes:
-       - ${DB_DATA_PATH}:/var/lib/mysql
+       - db_data:/var/lib/mysql
      ports:
         - ${MYSQL_PORT}:3306   
      restart: always
@@ -18,8 +18,8 @@ services:
        - db
      image: ${WORDPRESS_IMAGE}
      volumes:
-       - ${WEB_ROOT_PATH}:/var/www
-       - ${WEB_ROOT_PATH}/html:/var/www/html
+       - wp_data:/var/www
+       - wp_data:/var/www/html
      ports:
        - ${WEBSERVER_PORT}:80
      restart: always
